[package]
name = "enum-utility-macros"
version = "0.1.0"
authors = ["Oliver Heilmann"]
edition = "2021"
license = "MPL-2.0"
description = "A macro to generate useful helpers for enums"
documentation = "https://docs.rs/enum-utility-macros"
homepage = "https://github.com/HOminus/enum-utility-macros"
repository = "https://github.com/HOminus/enum-utility-macros"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
